Fix user-profile overlapping with footer problem

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -274,6 +274,10 @@ body {
   .dataTables_paginate {
     float: left !important;
   }
+
+  #user-profile {
+    margin-bottom: 70px;
+  }
 }
 
 footer {
